# chimera

./: .gitignore  README.md  package-lock.json
data/my_table.lance/_transactions/: 0-d7b4903c-e874-488f-b235-8d35d0190fbf.txn  1-53371309-3f9a-48f8-81ef-5285513f72a9.txn
embeddings-api/: calling_examples.py  calling_examples.rs  file_embedding.py  file_embedding.rs  prompt_embedding.py  prompt_embedding.rs
files-to-index/6110-sp24-main/: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  run.sh  test.dcf  test.sh
files-to-index/6110-sp24-main/src/: main.rs  parser.rs  tokenizer.rs
files-to-index/6110-sp24-main/src/snapshots/: decaf_rust__tokenizer__tests__tokenizer@IT0gLS0gKysgLSAhID0gPiA+PSA8IDw9ICogLyAlICsgLSA7IFsgXSB7IH0gKCAp.snap  decaf_rust__tokenizer__tests__tokenizer@J1xcJw==.snap  decaf_rust__tokenizer__tests__tokenizer@J1xuJw==.snap  decaf_rust__tokenizer__tests__tokenizer@J211bHQn.snap  decaf_rust__tokenizer__tests__tokenizer@J2En.snap  decaf_rust__tokenizer__tests__tokenizer@Ly8gdGhpcyBpcyBhIGNvbW1lbnQKaW50IG1haW4=.snap  decaf_rust__tokenizer__tests__tokenizer@MHgxMjNoZWxsbw==.snap  decaf_rust__tokenizer__tests__tokenizer@aGVsbG8gd29ybGQ=.snap
files-to-index/6110-sp24-main/src/utils/: cli.rs  mod.rs
files-to-index/lecture notes/: l-2pc.txt  l-bft.txt  l-bitcoin.txt  l-ethereum.txt  l-farm.txt  l-gfs.txt  l-grove.txt  l-linearizability.txt  l-memcached.txt  l-raft-QA.txt  l-raft.txt  l-raft2.txt  l-rpc.txt  l-spanner.txt  l-sundr.txt  l-zookeeper.txt  l01.txt
semantic-files/: package-lock.json  package.json
semantic-files/src-tauri/: Cargo.toml  tauri.conf.json
tauri/: package-lock.json  package.json
tauri/files-to-index/: test_create_table.py
tauri/src/: App.css  App.tsx  main.tsx
tauri/src-tauri/: Cargo.toml  similarity_search.rs  tauri.conf.json
tauri/src-tauri/src/: db.rs  indexer.rs  main.rs  parser.rs  similarity_search.rs
tauri/src-tauri/src/embeddings/: file_embedding.rs  mod.rs  prompt_embedding.rs
tauri/src-tauri/test_data/: test_create_table.py
tauri/src-tauri/test_data/my_table.lance/_transactions/: 0-6e0e8002-f8fe-410f-b370-fd519358f98d.txn  1-fd8dafec-2fcf-4a13-a72e-c502696ec98a.txn
tauri/src-tauri/test_data/my_table.lance/_versions/: 1.manifest  2.manifest
(+14 files in other folders)
