[package]
name = "decaf-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }

[dev-dependencies]
base64 = "0.21.7"
insta = { version = "1.34.0", features = ["yaml"] }
rstest = "0.18.2"

[profile.dev.package]
insta.opt-level = 3
