[package]
name = "semantic-files"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vectordb = "0.4.10"
walkdir = "2.4.0"
anyhow = "1.0.79"
pdf-extract = "0.7.4"
tokio = "1.36.0"
futures = "0.3.30"
arrow-schema = "50.0.0"
arrow-array = "50.0.0"
openai-api-rs = "4.0.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
